# chip-8

./: .gitignore  .gitmodules  Cargo.toml  README.md
src/: audio.rs  interpreter.rs  keypad.rs  lib.rs  main.rs  platform.rs  screen.rs
tests/: quirks.rs
