[package]
name = "chip-8"
version = "0.1.0"
edition = "2021"

[dependencies]
minifb = "0.28.0"
rfd = "0.15.2"
strum = { version = "0.27", features = ["derive"] }
rand = "0.9.0"
ctrlc = "3.4.5"
clap = { version = "4.5.30", features = ["derive"] }
rodio = "0.20.1"
paris = { version = "1.5.15", features = ["no_logger", "macros"] }
