[package]
name = "chip-8"
version = "0.1.0"
edition = "2021"

[lib]
name = "chip8"
path = "src/lib.rs"

[dependencies]
rand = "0.9.0"
ctrlc = "3.4.5"
clap = { version = "4.5.30", features = ["derive"] }
paris = { version = "1.5.15", features = ["no_logger", "macros"] }
sdl3 = { version = "0.14.13", features = ["build-from-source", "test-mode", "image"] }
sdl3-image-sys = { version= "0", features=["no-sdlimage-vendored"]}
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
